# aerospace-rules

./: Cargo.toml  restart-service.sh  test-config.toml
.github/workflows/: ci.yml
src/: aerospace.rs  config.rs  lib.rs  main.rs  rules.rs
