[package]
name = "aerospace-rules"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aerospace-rules-service"
path = "src/bin/service.rs"

[[bin]]
name = "aerospace-rules"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"
clap = { version = "4.0", features = ["derive"] }
shlex = "1.3.0"

[dev-dependencies]
tempfile = "3.0"
